htmxology-macros/src/fragment/snapshots/htmxology_macros__fragment__snapshot_tests__before_end_strategy.snap
---
source: htmxology-macros/src/fragment/mod.rs
expression: test_fragment(input)
---
#[allow(unused)]
mod __test {
    impl<T> htmxology::htmx::Fragment for ListItem<T> {
        fn insert_strategy(&self) -> htmxology::htmx::InsertStrategy {
            htmxology::htmx::InsertStrategy::BeforeEnd
        }
    }
}
