htmxology-macros/src/fragment/snapshots/htmxology_macros__fragment__snapshot_tests__generic_with_default.snap
---
source: htmxology-macros/src/fragment/mod.rs
expression: test_fragment(input)
---
#[allow(unused)]
mod __test {
    impl<T = Bar> htmxology::htmx::Fragment for FooFragment<T> {
        fn insert_strategy(&self) -> htmxology::htmx::InsertStrategy {
            htmxology::htmx::InsertStrategy::InnerHtml
        }
    }
}
