htmxology-macros/src/fragment/snapshots/htmxology_macros__fragment__snapshot_tests__inner_html_strategy.snap
---
source: htmxology-macros/src/fragment/mod.rs
expression: test_fragment(input)
---
#[allow(unused)]
mod __test {
    impl htmxology::htmx::Fragment for Notification {
        fn insert_strategy(&self) -> htmxology::htmx::InsertStrategy {
            htmxology::htmx::InsertStrategy::InnerHtml
        }
    }
}
