htmxology-macros/src/fragment/snapshots/htmxology_macros__fragment__snapshot_tests__multiple_generics_with_defaults.snap
---
source: htmxology-macros/src/fragment/mod.rs
expression: test_fragment(input)
---
#[allow(unused)]
mod __test {
    impl<T = Foo, U: Clone = Vec<u8>> htmxology::htmx::Fragment for MultiFragment<T, U> {
        fn insert_strategy(&self) -> htmxology::htmx::InsertStrategy {
            htmxology::htmx::InsertStrategy::BeforeEnd
        }
    }
}
